--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -7,7 +7,9 @@
     android:background="@drawable/background_one"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".WelcomePage">
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,11 +19,36 @@
         android:textSize="48sp"
         android:layout_marginTop="300dp"
         app:drawableTopCompat="@drawable/taxi_icon" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/opensans_condensed_extrabold"
-        android:text="MAIN PAGE"
+        android:text="CarpoolClan"
         android:textColor="@color/black"
         android:textSize="48sp" />
+
+    <Button
+        android:id="@+id/loginRedirect"
+        android:layout_width="280dp"
+        android:layout_height="80dp"
+        android:fontFamily="@font/opensans_condensed_semibold"
+        android:text="LOGIN"
+        android:textSize="32sp"
+        android:layout_marginTop="120dp"
+        android:backgroundTint="@color/amber_400"
+        app:cornerRadius = "20dp"/>
+
+    <Button
+        android:id="@+id/signupRedirect"
+        android:layout_width="280dp"
+        android:layout_height="80dp"
+        android:fontFamily="@font/opensans_condensed_semibold"
+        android:text="SIGN UP"
+        android:textSize="32sp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/amber_400"
+        app:cornerRadius = "20dp" />
+
+
 </LinearLayout>
