--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="amber_400">#FBBF24</color>
+    <color name="slate_400">#94A3B8</color>
+    <color name="yellow_500">#EAB308</color>
+    <color name="gray_700">#374151</color>
 </resources>
