--- a/app/src/main/res/layout/activity_edit_account_page.xml
+++ b/app/src/main/res/layout/activity_edit_account_page.xml
@@ -109,7 +109,7 @@
                 android:background="@drawable/grey_border"
                 android:layout_marginTop="2dp"
                 android:padding="8dp"
-                android:hint="Enter New Password"
+                android:hint="Enter new password"
                 android:inputType="textPassword"
                 android:drawableStart="@drawable/lock"
                 android:drawablePadding="8dp" />
