--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -67,7 +67,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/signupRedirectText"
+                android:id="@+id/registration_page_redirect"
                 android:fontFamily="@font/opensans_semibold"
                 android:text="Not yet registered? Sign Up"
                 android:layout_gravity="center"
