--- a/app/src/main/res/layout/activity_weather_wizard_page.xml
+++ b/app/src/main/res/layout/activity_weather_wizard_page.xml
@@ -48,9 +48,23 @@
                 android:textSize="32sp"
                 android:textAlignment="center"
                 android:textColor="@color/amber_400"/>
-            <com.google.android.material.slider.Slider
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:drawableStartCompat="@drawable/thermostat" />
+                <com.google.android.material.slider.Slider
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:valueFrom="18"
+                    android:valueTo="32"
+                    android:stepSize="1"/>
+            </LinearLayout>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
