implemented google maps

--- a/app/src/main/res/layout/activity_view_potential_offers_page.xml
+++ b/app/src/main/res/layout/activity_view_potential_offers_page.xml
@@ -7,4 +7,13 @@
     android:background="@drawable/background_four"
     tools:context=".ViewPotentialOffersPage">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="135dp"
+        android:text="Show Map"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
