--- a/app/src/main/res/layout/activity_make_offers_page.xml
+++ b/app/src/main/res/layout/activity_make_offers_page.xml
@@ -75,17 +75,16 @@
                     android:text="Step 2: Enter Final Destination"
                     android:textColor="@color/gray_700"
                     android:textSize="18sp" />
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/make_offer_destination"
+                    android:hint="Final Destination"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="2dp"
                     android:background="@drawable/grey_border"
                     android:drawableStart="@drawable/location"
                     android:drawablePadding="8dp"
-                    android:hint="Final Destination"
-                    android:inputType="none"
-                    android:padding="8dp" />
+                    android:padding="8dp"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
