--- a/app/src/main/res/layout/activity_incoming_requests_page.xml
+++ b/app/src/main/res/layout/activity_incoming_requests_page.xml
@@ -8,7 +8,7 @@
     android:fillViewport="true"
     android:scrollbars="vertical"
     android:background="@drawable/background_five"
-    tools:context=".ViewPotentialOffersPage">
+    tools:context=".IncomingRequestsPage">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,15 +25,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_condensed_extrabold"
-            android:text="Potential Offers"
+            android:text="Incoming Requests"
             android:textColor="@color/black"
             android:textSize="48sp"
             android:layout_marginTop="10dp" />
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/potential_offers_recycler_view"
+            android:id="@+id/incoming_requests_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
 </ScrollView>
