--- a/app/src/main/res/layout/activity_weather_wizard_page.xml
+++ b/app/src/main/res/layout/activity_weather_wizard_page.xml
@@ -15,6 +15,7 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/home_page_redirect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -40,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
+                android:gravity="center"
                 android:padding="24dp"
                 android:background="@drawable/grey_border">
                 <TextView
@@ -48,27 +49,53 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_condensed_extrabold"
                     android:text="Temperature Controls"
-                    android:textSize="32sp"
+                    android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textColor="@color/amber_400"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:textColor="@color/amber_400"
+                    android:layout_marginBottom="5dp"/>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#fff1a3"
+                    app:cardElevation="5dp">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        app:drawableStartCompat="@drawable/thermostat" />
-                    <com.google.android.material.slider.Slider
-                        android:layout_width="match_parent"
+                        android:id="@+id/current_temperature"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="20dp"
+                        android:fontFamily="@font/opensans_condensed_semibold"
+                        android:text="Current Temperature: 21.0°C"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"/>
+                </androidx.cardview.widget.CardView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:src="@drawable/thermostat_blue"/>
+                    <com.google.android.material.slider.Slider
+                        android:id="@+id/temperature_slider"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:stepSize="1"
+                        android:value="21"
                         android:valueFrom="18"
                         android:valueTo="32"
-                        android:stepSize="1"/>
+                        app:labelBehavior="gone"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/thermostat_red"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,7 +116,7 @@
                     android:text="Window Controls"
                     android:textAlignment="center"
                     android:textColor="@color/amber_400"
-                    android:textSize="32sp" />
+                    android:textSize="28sp" />
                 <TableLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
