--- a/app/src/main/res/layout/activity_manage_playlist_page.xml
+++ b/app/src/main/res/layout/activity_manage_playlist_page.xml
@@ -1,56 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fillViewport="true"
-    android:scrollbars="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:background="@drawable/background_three"
+    android:orientation="vertical"
     tools:context=".ManagePlaylistPage">
-    <LinearLayout
+    <TextView
+        android:id="@+id/home_page_redirect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-        <TextView
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:drawableLeftCompat="@drawable/back_arrow" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/opensans_condensed_extrabold"
+        android:text="MixMaster"
+        android:textColor="@color/black"
+        android:textSize="48sp"
+        android:layout_marginTop="10dp"
+        app:drawableRightCompat="@drawable/dj_icon" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/opensans_condensed_extrabold"
+        android:text="Currently Playing"
+        android:textAlignment="textStart"
+        android:layout_marginStart="18dp"
+        android:textColor="@color/slate_400"
+        android:textSize="30sp"
+        android:layout_marginTop="10dp" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="8dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="8dp">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            app:drawableLeftCompat="@drawable/back_arrow" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_condensed_extrabold"
-            android:text="MixMaster"
-            android:textColor="@color/black"
-            android:textSize="48sp"
-            android:layout_marginTop="20dp"
-            app:drawableRightCompat="@drawable/dj_icon" />
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            app:cardCornerRadius="30dp"
-            app:cardElevation="20dp">
-            <LinearLayout
-                android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:weightSum="5"
+            android:layout_margin="10dp">
+            <ImageView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:src="@drawable/music_album_icon"
+                android:layout_weight="1"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:padding="24dp"
-                android:background="@drawable/grey_border">
+                android:layout_weight="4"
+                android:layout_marginHorizontal="2dp">
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/current_song_name"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_condensed_extrabold"
-                    android:text="Manage Your Playlist"
-                    android:textSize="32sp"
-                    android:textAlignment="center"
-                    android:textColor="@color/amber_400"/>
+                    android:text="NO SONG SELECTED"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/current_artist_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_condensed_regular"
+                    android:text="NO ARTIST SELECTED"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"/>
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
-</ScrollView>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_song_button"
+        android:fontFamily="@font/opensans_condensed_semibold"
+        android:text="Add Songs"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:layout_marginHorizontal="16dp"
+        android:backgroundTint="@color/amber_400"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/opensans_condensed_extrabold"
+        android:text="Manage Playlist"
+        android:textAlignment="textStart"
+        android:layout_marginStart="18dp"
+        android:textColor="@color/slate_400"
+        android:textSize="30sp"
+        android:layout_marginTop="10dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/display_songs_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </androidx.recyclerview.widget.RecyclerView>
+</LinearLayout>
