--- a/app/src/main/res/layout/activity_rating_page.xml
+++ b/app/src/main/res/layout/activity_rating_page.xml
@@ -21,22 +21,45 @@
             android:layout_margin="30dp"
             app:cardCornerRadius="30dp"
             app:cardElevation="20dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/grey_border"
+                android:gravity="center_horizontal"
                 android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:padding="24dp"
-                android:background="@drawable/grey_border">
+                android:padding="24dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_condensed_extrabold"
-                    android:text="How did They Do?"
+                    android:gravity="center_horizontal"
+                    android:text="Share your feedback"
                     android:textAlignment="center"
                     android:textColor="@color/amber_400"
                     android:textSize="34sp" />
+
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:progressTint="#FFC107"
+                    android:stepSize="1"
+                    android:contentDescription="rating"
+                    />
+
+                <Button
+                    android:id="@+id/send_feedback_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="30dp"
+                    android:backgroundTint="@color/amber_400"
+                    android:fontFamily="@font/opensans_condensed_semibold"
+                    android:text="Submit"
+                    android:textSize="28sp"
+                    app:cornerRadius="20dp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
