--- a/app/src/main/res/layout/activity_potential_offers_page.xml
+++ b/app/src/main/res/layout/activity_potential_offers_page.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/background_five"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".IncomingRequestsPage">
+    android:background="@drawable/background_five"
+    tools:context=".PotentialOffersPage">
     <TextView
         android:id="@+id/home_page_redirect"
         android:layout_width="match_parent"
@@ -20,12 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/opensans_condensed_extrabold"
-        android:text="Incoming Requests"
+        android:text="Potential Offers"
         android:textColor="@color/black"
         android:textSize="48sp"
         android:layout_marginTop="10dp" />
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/incoming_requests_recycler_view"
+        android:id="@+id/potential_offers_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
