refactored generateOffersPage, updated db accordingly

--- a/app/src/main/res/layout/activity_generate_offers_page.xml
+++ b/app/src/main/res/layout/activity_generate_offers_page.xml
@@ -8,5 +8,5 @@
     android:fillViewport="true"
     android:scrollbars="vertical"
     android:background="@drawable/background_one"
-    tools:context=".GenerateRequestsPage">
+    tools:context=".GenerateOffersPage">
 </ScrollView>
