--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -17,17 +17,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_condensed_regular"
-            android:text="Welcome To"
+            android:fontFamily="@font/opensans_condensed_extrabold"
+            android:text="CarpoolClan"
             android:textColor="@color/black"
             android:textSize="48sp"
             android:layout_marginTop="240dp"
-            app:drawableTopCompat="@drawable/taxi_icon" />
+            app:drawableTopCompat="@drawable/barbarian" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_condensed_extrabold"
-            android:text="CarpoolClan"
+            android:fontFamily="@font/opensans_condensed_regular"
+            android:text="Clash for Commutes"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="48sp" />
         <Button
@@ -39,7 +40,7 @@
             android:textSize="32sp"
             android:layout_marginTop="120dp"
             android:backgroundTint="@color/amber_400"
-            app:cornerRadius = "20dp"/>
+            app:cornerRadius = "20dp" />
         <Button
             android:id="@+id/registration_page_redirect"
             android:layout_width="280dp"
